<resources>
    <string name="app_name">Start Your Diet</string>
    <string name="Login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="facebook_app_id">359585651523212</string>
    <string name="fb_login_protocol_scheme">fb359585651523212</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="channel_name">Test</string>
    <string name="channel_description">this is test</string>

    <string-array name="weekly_goal">
        <item> 0.25 </item>
        <item> 0.5 </item>
        <item> 1 </item>
    </string-array>

    <string-array name="weekly_activity">
        <item> Little to no exercise </item>
        <item> Light exercise (1–3 days per week) </item>
        <item> Moderate exercise (3–5 days per week) </item>
        <item> Heavy exercise (6–7 days per week) </item>
        <item> Very heavy exercise (twice per day) </item>
    </string-array>

    <string-array name="Breakfast">
        <item> Egg </item>
        <item> Cereal </item>
        <item> Coffee </item>
        <item> Protein shake </item>
    </string-array>

    <string-array name="Lunch">
        <item> Rice </item>
        <item> meat </item>
        <item> Fish </item>
        <item> Hamburger </item>
    </string-array>

    <string-array name="Snack">
        <item> Chocolate cookie </item>
        <item> Protein Bar </item>
        <item> Apple </item>
        <item> Banana </item>
    </string-array>

    <string-array name="Dinner">
        <item> Eggs </item>
        <item> Yogurt </item>
        <item> Salad </item>
    </string-array>

</resources>
