<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/SignUpheadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/UserName" />
    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/Email" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Name" />


    <EditText
        android:id="@+id/editAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|number"
        android:hint="Age"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/Password" />
    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Confirm Password"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnSignUP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="SIGNUP" />

    <TextView
        android:id="@+id/textViewLogin"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/aqua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already have an account? Login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>


    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal = "true"
        android:layout_centerVertical = "true"/>

</LinearLayout>

//commit